# objectlevel_fusion

./: .gitignore  README.md  docker-compose.yml  run
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  entrypoint.sh
examples/: custom_manual_control.py  register_sensor.bash  sensor_simulator.py  unregister_sensor.bash
examples/carla/: custom_manual_control.py
experiments/: sensor_layer_mock.py  temporal_alignment_EKF.ipynb
experiments/carla/: README.md  application_layer_csv.py  plots.ipynb  unregister.bash
experiments/carla/both_moving/application_layer/: temporal_alignment.csv
experiments/carla/both_moving/fusion_layer/: temporal_alignment.csv
experiments/carla/both_moving/sensor_layer/: simulation.rec
experiments/carla/many_objects/sensor_layer/: extra_objs.csv  general.csv
experiments/carla/stopped_car/application_layer/: no_temporal_alignment.csv  temporal_alignment.csv
experiments/carla/stopped_car/sensor_layer/input_bag/: metadata.yaml
experiments/carla_experiments/: README.md  application_layer_csv.py  plots.ipynb  register.bash
experiments/carla_experiments/both_moving/: both_moving.csv  both_moving_ego.csv
experiments/carla_experiments/both_moving/application_layer/: no_temporal_alignment.csv
experiments/carla_experiments/both_moving/fusion_layer/: no_temporal_alignment.csv
experiments/carla_experiments/both_moving/input_bag/: input_bag_0.db3
experiments/carla_experiments/both_moving/not_temporal_aligned/: application_layer.csv  fusion_layer.csv
experiments/carla_experiments/both_moving/sensor_layer/: general.csv
experiments/carla_experiments/both_moving/sensor_layer/input_bag/: metadata.yaml
experiments/carla_experiments/both_moving/temporal_aligned/: application_layer.csv
experiments/carla_experiments/both_moving_temporal_aligned/: both_moving.csv  both_moving_ego.csv
experiments/carla_experiments/stopped_car/: stopped_car.csv  stopped_car.rec  stopped_car_ego.csv
experiments/carla_experiments/stopped_car/application_layer/: no_temporal_alignment.csv
experiments/carla_experiments/stopped_car/fusion_layer/: no_temporal_alignment.csv  temporal_alignment.csv
experiments/carla_experiments/stopped_car/input_bag/: input_bag_0.db3
experiments/carla_experiments/stopped_car/sensor_layer/: general.csv  simulation.rec
experiments/carla_experiments/stopped_car/temporal_aligned/: application_layer.csv
experiments/carla_experiments/stopped_car_temporal_aligned/: stopped_car.csv  stopped_car.rec  stopped_car_ego.csv
experiments/rectangles_intersection/: CMakeLists.txt  geogebra_intersection.ggb  intersection.cpp
experiments/wrap_angles/: wrap.cpp  wrap.py
fusion_layer/: CMakeLists.txt  package.xml
fusion_layer/include/: types.hpp
fusion_layer/include/fusion_layer/: fusion.hpp  sensor.hpp  simple_association.hpp  spatial_alignment.hpp  temporal_aligner.hpp  temporal_aligner_ekf.hpp  temporal_alignment_ekf.hpp
fusion_layer/src/: fusion.cpp  sensor.cpp  simple_association.cpp  spatial_alignment.cpp  temporal_aligner_ekf.cpp  temporal_alignment_ekf.cpp
fusion_layer/srv/: RegisterSensor.srv  RemoveSensor.srv
fusion_layer/test/: test_alignment.cpp
object_model_msgs/: CMakeLists.txt  package.xml
object_model_msgs/msg/: Classification.msg  Dimension.msg  Dimensions.msg  ExistenceProbability.msg  Object.msg  ObjectModel.msg  ShapeFeatures.msg  Track.msg
utils/: draft_EKF_temporal_alignment.ipynb
